[gd_scene load_steps=7 format=2]

[ext_resource path="res://assests/Font/Bangers.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/screens/Score.gd" type="Script" id=2]
[ext_resource path="res://src/Theme/defaultTheme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "NewScore"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/scoreValue:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.267943, 0.0769466, 1 ),
"update": 1,
"values": [ 45, 80, 45 ]
}

[sub_resource type="Animation" id=3]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/scoreValue:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 45 ]
}

[node name="Score" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = -0.025
anchor_right = 47.85
anchor_bottom = 3.05
margin_right = -0.00012207
margin_bottom = -7.62939e-06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreValue" type="Label" parent="CenterContainer"]
margin_left = 946.0
margin_top = 36.0
margin_right = 967.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "normal"
anims/NewScore = SubResource( 2 )
anims/normal = SubResource( 3 )

[node name="gameOver" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="gameOver"]
margin_left = 806.688
margin_top = 353.475
margin_right = 1140.69
margin_bottom = 410.475
theme = ExtResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="gameOver/Button" to="." method="_on_Button_pressed"]
